--- a/src/content/h1/engine/scripting/page.yml
+++ b/src/content/h1/engine/scripting/page.yml
@@ -12,6 +12,6 @@ thanks:
   Mimickal:
     en: Additional background on scripting, edits for clarity and extra information
   TehLag:
-    en: Additional script information (limits, types, etc...)
+    en: Additional script information (limits, types, functionality, etc...)
   Ifafudafi:
     en: Script limits information
